# Technology

./: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  client.cpp  client.h  client.ui  main.cpp
include/: Bot.h
src/: Bot.cpp  ClientSession.cpp  Server.cpp
src/Connection/: ClientSession.h  Server.h
